scrollbar jumps fixed

--- a/src/stylesheets/Kmedia.scss
+++ b/src/stylesheets/Kmedia.scss
@@ -14,6 +14,7 @@
 //////////ALL YOUR CSS IS HERE ↴
 @import 'includes/not-sorted-scss';
 
+body { overflow-y: scroll; }
 
 .debug {
   position: fixed;
